[package]
name = "matrix-visualisations"
version = "0.1.0"
authors = ["Eisha Chen-yen-su <chenyensu0@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
percent-encoding = "1.0.1"
petgraph = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
stdweb = "0.4"
yew = { git = "https://github.com/DenisKolodin/yew" }
